[package]
name = "parallel_actor_creation_bug"
version = "0.1.0"
authors = ["hardliner66 <hardliner66@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
debug = true

[dependencies]
riker = { path = "../riker" }
rayon = "1.3.1"
