[package]
name = "riker_bench"
version = "0.1.0"
authors = ["hardliner66 <hardliner66@gmail.com>"]
edition = "2018"
default-run = "riker_bench"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
debug = true

[[bin]]
name = "riker_bench"

[dependencies]
argparse = "0.2.2"
num_cpus = "1.13.0"
log = "0.4.8"
fern = "0.6.0"
char_combinator = "1.0.0"

riker = { path = "../riker" }
chrono = "0.4.13"
slog = "2.5.2"

[features]
default=[]
logging=[]
